# my-project

./: blockchain.py  my_server.py  pyproject.toml
funcoin/: node.py  pyproject.toml
funcoin/funcoin/: server.py
